--- a/FileFinderTests/FileFinderTests.fsproj
+++ b/FileFinderTests/FileFinderTests.fsproj
@@ -6,11 +6,15 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <Content Include="TestFiles\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="TypeExtensions.fs" />
     <Compile Include="WinMerge.fs" />
     <Compile Include="RulesTests.fs" />
     <Compile Include="FinderTests.fs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dev\WesternCap\WinMergeEquals\WinMergeEquals.fsproj" />
     <ProjectReference Include="..\FileFinder\FileFinder.fsproj" />
